2004-06-01  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* (package sequence) track.c: added markers track (for bars, tempo, signatures, etc.) to track
	* (package sequence) seqmidi.c: added first version of tempo and time signature event loading for scoob track

2004-05-26  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* include/fts/Makefile.am: added missing config-macosx.h and config-win32.h in list of files to  distribute.

	* include/Makefile.am: added missing ftsconfig-macosx.h in list of files to distribute.

	* macosxbuild/jMaxProject/Makefile.am: added missing .plist files in list of files to distribute.

2004-05-25  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* packages/dtd/c/src/dtd_thread.c, dtd_thread.h, readsf.c, writesf.c: fixed compilation with gcc-3.3.3
	closed bug "[ 949069 ] jMax doesn't compile with gcc-3.3".

2004-05-25  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* data.c: introduced enumeration_t enum support
	* data.c: introduced propobj base class (class with dynamic properties, derived from scoob_class of sequence package)
	* note.c: redesigned scoob_class based on propobj
	* note.c: added first sketch scomark_class (for score markers such as tempo changes, bars, etc.)

2004-05-18  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* expression.c: removed default return of object for method invocation without return value
	* (package data) fmat.c: added fts_return_object() to many many methods
	* (package data) fmat.c/fvec.c: further extensions (new methods) of fmat and fslice

2004-05-14  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* (package data) fmat.c: added new methods to fmat class
	* (package data) fmat.c: added fts_return_object() calls to many methods without return value
	* (package data) fvec.c: moved fslice classes (frow and fcol) to fvec.c
	* expression.c: introduced FTS_EXPRESSION_ARG_ONSET macro (for FTM starting argument numbering with $1 instead of $0)

2004-05-10  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>