@@ -132,6 +132,7 @@ void propobj_class_append_properties(fts_class_t *cl, fts_array_t *array);
 void propobj_append_properties(propobj_t *self, fts_array_t *array);
 void propobj_post_properties(propobj_t *self, fts_bytestream_t *stream);
 void propobj_dump_properties(fts_object_t *o, int winlet, fts_symbol_t s, int ac, const fts_atom_t *at);
+void propobj_remove_property(fts_object_t *o, int winlet, fts_symbol_t s, int ac, const fts_atom_t *at);
 
 void propobj_copy(propobj_t *org, propobj_t *copy);
 void propobj_copy_function(const fts_atom_t *from, fts_atom_t *to);
