@@ -53,6 +53,7 @@ extern fts_symbol_t seqsym_duration;
 extern fts_symbol_t seqsym_velocity;
 extern fts_symbol_t seqsym_channel;
 extern fts_symbol_t seqsym_tempo;
+extern fts_symbol_t seqsym_meter;
 extern fts_symbol_t seqsym_cue;
 extern fts_symbol_t seqsym_section;
 
