@@ -50,6 +50,7 @@ fts_symbol_t seqsym_duration = 0;
 fts_symbol_t seqsym_velocity = 0;
 fts_symbol_t seqsym_channel = 0;
 fts_symbol_t seqsym_tempo = 0;
+fts_symbol_t seqsym_meter = 0;
 fts_symbol_t seqsym_cue = 0;
 fts_symbol_t seqsym_section = 0;
 
@@ -131,6 +132,7 @@ seqsym_config(void)
   seqsym_velocity = fts_new_symbol("velocity");
   seqsym_channel = fts_new_symbol("channel");
   seqsym_tempo = fts_new_symbol("tempo");
+  seqsym_meter = fts_new_symbol("meter");
   seqsym_cue = fts_new_symbol("cue");
   seqsym_section = fts_new_symbol("section");
   
